Adiciona página para o GitHub Pages

--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
     <section class="u-backlink u-clearfix">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
 
-            <p class="u-align-left u-text u-text-2"> Ada Lovelace foi uma mulher extraordinária que desafiou os limites
-                da sua época. Ela combinou a paixão
-                pela poesia com a genialidade da matemática, e criou a linguagem dos computadores. Ela colaborou com
-                Charles Babbage, um visionário que projetou a primeira máquina capaz de processar dados. Ada Lovelace
-                imaginou que os computadores poderiam fazer mais do que apenas cálculos numéricos. Ela previu que eles
-                poderiam criar música, arte e ciência. Ela foi a primeira a entender o potencial da tecnologia para
-                transformar o mundo. Ela foi uma pioneira, uma inovadora e uma inspiração para as mulheres na
-                tecnologia. Ela viveu apenas 36 anos, mas deixou um legado que dura até hoje.</p>
+            <p class="u-align-left u-text u-text-2"> Ada Lovelace, cujo nome completo era Augusta Ada King, Condessa de Lovelace, nasceu em 10 de dezembro de 1815, e foi uma matemática e escritora britânica, conhecida principalmente por seu trabalho pioneiro no campo da ciência da computação. Ada Lovelace é frequentemente considerada a primeira programadora da história, devido às suas contribuições para o desenvolvimento do que é considerado como o primeiro algoritmo projetado para ser processado por uma máquina.
+
+                A principal colaboração de Ada Lovelace foi com Charles Babbage, um matemático e inventor que projetou a Máquina Analítica, uma máquina mecânica que, em muitos aspectos, pode ser considerada como um protótipo de computador. Entre 1842 e 1843, Ada Lovelace traduziu uma série de notas escritas por Luigi Federico Menabrea sobre a máquina de Babbage do italiano para o inglês. Além disso, ela adicionou suas próprias anotações extensas, mais do que triplicando o tamanho do artigo original.
+                
+                O que torna as contribuições de Ada Lovelace notáveis é que, em suas anotações, ela não apenas traduziu o trabalho de Menabrea, mas também acrescentou conceitos e ideias originais. Ela percebeu que a máquina de Babbage poderia ser usada não apenas para cálculos numéricos, mas também para manipular símbolos e representar informações além de simples números. Ada Lovelace, então, propôs um método para calcular uma sequência de números de Bernoulli usando a Máquina Analítica, o que é considerado o primeiro algoritmo de programação.
+                
+                Ada Lovelace faleceu em 27 de novembro de 1852, aos 36 anos, devido a câncer uterino. Apesar de sua vida curta, seu trabalho deixou um impacto significativo e é reverenciado como um marco importante na história da computação. O Dia de Ada Lovelace é comemorado em 10 de dezembro para reconhecer suas contribuições para a ciência da computação e incentivar as mulheres na tecnologia.</p>
         </div>
 
     </section>
